@@ -1343,7 +1343,41 @@ rewrite_debug_stmt_uses (gimple stmt)
 	    }
 	}
       else
-	def = get_current_def (var);
+	{
+	  def = get_current_def (var);
+	  /* Check if get_current_def can be trusted.  */
+	  if (def)
+	    {
+	      basic_block bb = gimple_bb (stmt);
+	      basic_block def_bb
+		= SSA_NAME_IS_DEFAULT_DEF (def)
+		  ? NULL : gimple_bb (SSA_NAME_DEF_STMT (def));
+
+	      /* If definition is in current bb, it is fine.  */
+	      if (bb == def_bb)
+		;
+	      /* If definition bb doesn't dominate the current bb,
+		 it can't be used.  */
+	      else if (def_bb && !dominated_by_p (CDI_DOMINATORS, bb, def_bb))
+		def = NULL;
+	      /* If there is just one definition and dominates the current
+		 bb, it is fine.  */
+	      else if (get_phi_state (var) == NEED_PHI_STATE_NO)
+		;
+	      else
+		{
+		  struct def_blocks_d *db_p = get_def_blocks_for (var);
+
+		  /* If there are some non-debug uses in the current bb,
+		     it is fine.  */
+		  if (bitmap_bit_p (db_p->livein_blocks, bb->index))
+		    ;
+		  /* Otherwise give up for now.  */
+		  else
+		    def = NULL;
+		}
+	    }
+	}
       if (def == NULL)
 	{
 	  gimple_debug_bind_reset_value (stmt);
