@@ -1,3 +1,8 @@
+2011-07-04  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/49602
+	* gcc.dg/pr49602.c: New test.
+
 2011-06-29  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/49567
